--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="form-group back-color1 well">
+      <div class="back-color1 well">
           <h1>Welcome to our suggestion survey page... </h1>
-          <p>Kindly click below to take the survey and get to know which programming Language you should start with</p>
-          <button class="btn btn-success" id="continue">Continue</button>
+          <p>Kindly submit the survey below and get to know which programming Language you should start with</p>
+
       </div>
       <div class="continue">
         <form id="surveyForm">
@@ -27,10 +27,10 @@
           <div class="form-group">
             <label for="age">You fall under which age catogory</label>
             <select id="age" class="form-control">
-              <option value="Below20">Below 20</option>
-              <option value="20To30">20-30</option>
-              <option value="30To50">30-50</option>
-              <option value="above50">Above50</option>
+              <option value="1">Below 20</option>
+              <option value="2">20-30</option>
+              <option value="3">30-50</option>
+              <option value="4">Above50</option>
             </select>
           </div>
           <div class="form-group">
