--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <br>
           <br>
           <div class="form-group well">
-            <label for="name" class="col-form-label">Name</label>
+            <label for="name" class="col-form-label">Enter your Name</label>
               <input id="name" class="form-control" type="text">
           </div>
-          <div class="form-group">
+          <div class="form-group well">
             <label for="age">You fall under which age catogory</label>
             <select id="age" class="form-control">
               <option value="1">Below 20</option>
@@ -33,7 +33,7 @@
               <option value="4">Above50</option>
             </select>
           </div>
-          <div class="form-group">
+          <div class="form-group well">
             <label for="education"> Highest Education</label>
               <div class="radio">
                 <label>
@@ -57,7 +57,7 @@
                 </label>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group well">
               <label for="code">Do have coding knowedgle?</label>
               <div class="radio">
                 <label>
@@ -70,8 +70,8 @@
                 </label>
               </div>
             </div>
-            <div class="form-group">
-              <label for="intrest">Do have intrest in lerning programming?</label>
+            <div class="form-group well">
+              <label for="intrest">Do have interested in lerning programming?</label>
               <div class="radio">
                 <label>
                   <input type="radio" name="intrest" value="no" checked>No
@@ -83,7 +83,7 @@
                 </label>
               </div>
             </div>
-            <div class="form-group">
+            <div class="form-group well">
               <label for="experience">Do have any coding experience?</label>
               <div class="radio">
                 <label>
@@ -101,36 +101,37 @@
         </div>
 
         <br>
+
         <div id="results">
           <p>Here is your survey outcome...</p>
-          <div class="card">
-            <div class="card-body row">
-              <p>Dear <span class="name"></span>,</p>
-            </div>
+          <br>
+          <br>
+          <div class="card1">
+            <p>Dear <span class="name"></span>,</p>
           </div>
         </div>
-        <div id="begginer">
-          <p>you should start with</p>
-          <li>JavaScript</li>
-          <li>C#</li>
-          <li>Ruby</li>
+        <div id="begginer" class= "card">
+          <p>you should start with:</p>
+          <h6>1. JavaScript</h6>
+          <h6>2. C#</h6>
+          <h6>3. Ruby</h6>
         </div>
-        <div id="intermid">
-          <p>you should start with</p>
-          <li>Ruby</li>
-          <li>Go</li>
-          <li>Phython</li>
+        <div id="intermid"class= "card">
+          <p>you should start with:</p>
+          <h6>1. Ruby</h6>
+          <h6>2. Go</h6>
+          <h6>3. Phython</h6>
         </div>
-        <div id="expert">
-          <p>you should start with</p>
-          <li>Phython</li>
-          <li>Rust</li>
-          <li>Swift</li>
+        <div id="expert"class= "card">
+          <p>you should start with:</p>
+          <h6>1. Phython</h6>
+          <h6>2. Rust</h6>
+          <h6>3. Swift</h6>
         </div>
-        <div id="bluff">
+        <div id="bluff"class= "card">
           <p>How can you get experience in programming without the knowedgle of coding</p>
         </div>
-        <div id="noprograming">
+        <div id="noprograming"class= "card">
           <p>you should try something in which you have intrest</p>
         </div>
 
